--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -1,3 +1,7 @@
+---
+import '@fontsource-variable/roboto';
+---
+
 <!doctype html>
 <html lang="en">
 	<head>
@@ -5,18 +9,25 @@
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<title>My Portfolio</title>
 	</head>
 	<body>
 		<slot />
 	</body>
 </html>
 
-<style>
+<style is:global>
 	html,
 	body {
+		font-size: 24;
 		margin: 0;
 		width: 100%;
 		height: 100%;
+  		font-family: 'Roboto Variable', sans-serif;
+		font-size: 36;
+	}
+
+	*, *:before, *:after {
+		box-sizing: border-box;
 	}
 </style>
