Changes: - having fun with fonts (introduced new font) - fixed imports by introducing export defaults - introduced row

--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -1,5 +1,6 @@
 ---
 import '@fontsource-variable/roboto';
+import '@fontsource/dseg14-classic';
 ---
 
 <!doctype html>
@@ -23,7 +24,8 @@ import '@fontsource-variable/roboto';
 		margin: 0;
 		width: 100%;
 		height: 100%;
-  		font-family: 'Roboto Variable', sans-serif;
+  		// font-family: 'Roboto Variable', sans-serif;
+		font-family: 'DSEG14 Classic', sans-serif;
 		font-size: 36;
 	}
 
