--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import Layout from '../layouts/layout.astro';
-import {Container} from '../components/container'
+import Container from '../components/container'
+import Row from '../components/row'
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
@@ -8,4 +9,8 @@ import {Container} from '../components/container'
 
 <Layout>
 	<Container><p>Hello</p></Container>
+
+	<Row>This is row 1</Row>
+	<Row>This is row 2</Row>
+	<Row>This is row 3</Row>
 </Layout>
