Changes: - introduced new font: Libre Baskerville - added gutter 1.25 (/2) for Column class

--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -1,6 +1,7 @@
 ---
 import '@fontsource-variable/roboto';
-import '@fontsource/dseg14-classic';
+import '@fontsource/dseg14-classic';	//	digital like-font for testing
+import '@fontsource/libre-baskerville'; //	similar to Martas "Marion" (paid)
 ---
 
 <!doctype html>
@@ -25,7 +26,8 @@ import '@fontsource/dseg14-classic';
 		width: 100%;
 		height: 100%;
   		// font-family: 'Roboto Variable', sans-serif;
-		font-family: 'DSEG14 Classic', sans-serif;
+		// font-family: 'DSEG14 Classic', sans-serif;
+		font-family: 'Libre Baskerville', serif;
 		font-size: 36;
 	}
 
