--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -21,6 +21,8 @@ import '@fontsource/libre-baskerville'; //	similar to Martas "Marion" (paid)
 <style is:global>
 	html,
 	body {
+		color: white;
+		background-color: darkgrey;
 		font-size: 24;
 		margin: 0;
 		width: 100%;
