--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -22,7 +22,7 @@ import '@fontsource/libre-baskerville'; //	similar to Martas "Marion" (paid)
 	html,
 	body {
 		color: white;
-		background-color: darkgrey;
+		background-color: #101014;
 		font-size: 24;
 		margin: 0;
 		width: 100%;
