--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,20 +12,14 @@ import Header from '../components/header';
 
 <Layout>
 	<Container>
-
 	<Header/>
 
 	<Row>
-		<Column span={8}>
-			<Button href='/404'>click me</Button>
-			<Button href='/404'>click me 2</Button>
-			<Button href='/404'>click me</Button>
-			<Button href='/404'>click me 2</Button>	
-		</Column>
-
+			<Button href='b1'>Button1</Button>
+			<Button href='b1'>Button1</Button>
+			<Button href='b1'>Button1</Button>
+			<Button href='b1'>Button1</Button>
 	</Row>
-
-	
 
 	</Container>
 </Layout>
