--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import Layout from '../layouts/layout.astro';
 import { Container, Row, Column} from '../components/grid'
 import Button from '../components/button'
 import Header from '../components/header';
+import Footer from '../components/footer';
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
@@ -15,11 +16,12 @@ import Header from '../components/header';
 	<Header/>
 
 	<Row>
-			<Button href='b1'>Button1</Button>
-			<Button href='b1'>Button1</Button>
-			<Button href='b1'>Button1</Button>
-			<Button href='b1'>Button1</Button>
+			<Button href='b1'>Painting</Button>
+			<Button href='b1'>Animation</Button>
+			<Button href='b1'>Vj</Button>
+			<Button href='b1'>Other</Button>
 	</Row>
 
+	<Footer></Footer>
 	</Container>
 </Layout>
