--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,9 +18,12 @@ import Footer from '../components/footer';
 	<Row>
 			<Button href='b1'>Painting</Button>
 			<Button href='b1'>Animation</Button>
-			<Button href='b1'>Vj</Button>
+			<Button href='b1'>VJ</Button>
 			<Button href='b1'>Other</Button>
 	</Row>
+
+	some text
+	some
 
 	<Footer></Footer>
 	</Container>
