introduced thumbnail class

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import { Container, Row, Column} from '../components/grid'
 import Button from '../components/button'
 import Header from '../components/header';
 import Footer from '../components/footer';
+import Thumbnail from '../components/thumbnail';
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
@@ -24,6 +25,12 @@ import Footer from '../components/footer';
 
 	some text
 	some
+
+	<Row>
+		<Thumbnail src="img_forest.jpg" >2023/ 24</Thumbnail>
+		<Thumbnail src="img_forest.jpg" >2021/23</Thumbnail>
+		<Thumbnail src="img_forest.jpg" >- /2021</Thumbnail>
+	</Row>
 
 	<Footer></Footer>
 	</Container>
