Feature: adjusted mobile scaling

--- a/src/pages/animation.astro
+++ b/src/pages/animation.astro
@@ -1,9 +1,9 @@
 ---
 import Layout from '../layouts/layout.astro';
-import { Container, Row, Column} from '../components/grid'
-import Button from '../components/button'
+import { Container } from '../components/grid';
 import Header from '../components/header';
 import Footer from '../components/footer';
+import Navigation from '../components/navigation';
 import Thumbnail from '../components/thumbnail';
 import VideoSection from '../components/videoSection.tsx';
 ---
