--- a/src/pages/vj.astro
+++ b/src/pages/vj.astro
@@ -16,7 +16,9 @@ import { ClientRouter } from "astro:transitions";
     <div style={{ height: '4rem' }}></div>
     <Navigation />
     <div style={{ height: '4rem' }}></div>
-    <Gallery items={paintingGallery} />
+    
+    This is page with VJ.
+
     <Footer />
   </Container>
 </Layout>
