--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -5,9 +5,8 @@ import Header from '../components/header';
 import Footer from '../components/footer';
 import Navigation from '../components/navigation';
 import Gallery from '../components/gallery';
-
-// Load gallery data
 import paintingGallery from '../content/painting.json';
+import { ClientRouter } from "astro:transitions";
 ---
 
 <Layout>
@@ -33,3 +32,5 @@ Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapi
 Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.
   </Container>
 </Layout>
+
+<ClientRouter />
