--- a/src/pages/animation.astro
+++ b/src/pages/animation.astro
@@ -32,6 +32,15 @@ import { ClientRouter } from "astro:transitions";
       lineColor="#fff"
     />
 
+    <hr style="border: none; border-top: 3px solid #fff; margin: 3rem 0;" />
+
+    <VideoSection
+      src="https://www.youtube.com/embed/-O8btebCJ_Q?si=NqI4XAwFnMQnSNar"
+      title="Animation Title 3"
+      description="Custom description for animation 3."
+      lineColor="#fff"
+    />
+
     <Footer />
   </Container>
 </Layout>
